# oop-kasa

./: CMakeLists.txt  Kasa.cpp  Konto_pracownika.cpp  Konto_pracownika.h  Obiad.cpp  Obiad.h  Pracownik_firmy.cpp  Pracownik_firmy.h  Programista.cpp  Programista.h  README.md  Student.cpp  Student.h  czlowiek.cpp  czlowiek.h  main.cpp
idea/: modules.xml  workspace.xml
idea/dictionaries/: Pawel.xml
